# glimmer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/glimmer/: aabb.ixx  camera.ixx  color.ixx  geometry.ixx  image.ixx  material.ixx  material_property.ixx  material_property_checkerboard.ixx  material_property_image.ixx  material_property_uniform.ixx  matrix.ixx  mesh.ixx  obj.ixx  plane.ixx  ppm.ixx  quaternion.ixx  ray.ixx  renderer.ixx  renderer_path_tracer.ixx  renderer_simple_rt.ixx  scene.ixx  scene_object.ixx  sphere.ixx  transform.ixx  vector.ixx
src/tests/: aabb_tests.cpp  camera_tests.cpp  color_tests.cpp  image_tests.cpp  material_tests.cpp  matrix_tests.cpp  mesh_tests.cpp  obj_tests.cpp  ppm_tests.cpp  quaternion_tests.cpp  ray_tests.cpp  renderer_tests.cpp  scene_tests.cpp  sceneobject_tests.cpp  sphere_tests.cpp  transform_tests.cpp  vector_tests.cpp
